<resources>
    <string name="app_name">ARSocket</string>
    <string name="buttonConnect">Connect</string>
    <string name="buttonDisconnect">Disconnect</string>
    <string name="messageConnected">Successfully connected to </string>
    <string name="messageFailedToConnect">Failed to connect to </string>
    <string name="messageCanceledToConnect">Canceled to connect.</string>
    <string name="messageTimeoutToConnect">Connection timeout</string>
    <string name="buttonEvaluation">Start Evaluation</string>
    <string name="buttonEvaluationStop">Stop Evaluation</string>
    <string name="buttonLanguage">Language</string>
    <string name="buttonBeep">Beep</string>
    <string name="buttonBeepOn">On</string>
    <string name="buttonBeepOff">Off</string>
    <string name="buttonMode">Mode</string>
    <string name="buttonForward">FWD</string>
    <string name="buttonBackward">BACK</string>
    <string name="buttonTrainingMode">Training</string>
    <string name="buttonScenarioMode">Scenario</string>
    <string name="buttonScenario1">1</string>
    <string name="buttonScenario2">2</string>
    <string name="buttonScenario3">3</string>
    <string name="buttonScenario4">4</string>
    <string name="buttonEnglish">English</string>
    <string name="buttonJapanese">Japanese</string>
    <string name="buttonReset">Reset Head Pos.</string>
    <string name="buttonConfig">Configure</string>
    <string name="distance">Distance</string>
    <string name="sensor">Sensor</string>
    <string name="multiscore">Multi</string>
    <string name="eyescore">Eye</string>
    <string name="talkscore">Talk</string>
    <string name="threshold">Threshold(cm)</string>
    <string name="scenarioTitle">Scenario</string>
    <string name="currentStateTitle">Current State</string>
    <string name="buttonLevel">Level</string>
    <string name="buttonEasy">Easy</string>
    <string name="buttonMedium">Medium</string>
    <string name="buttonHard">Hard</string>
    <string name="textStateNone">-</string>
    <string name="textState0">0</string>
    <string name="textState1">1</string>
    <string name="textState2">2</string>
    <string name="textState3">3</string>
    <string name="textState4">4</string>
    <string name="textState5">5</string>
    <string name="textState6">6</string>
    <string name="textState7">7</string>
    <string name="descBackButton">Back to home</string>
    <string name="textUpload">Upload</string>
    <string name="buttonUpload">Upload Result</string>
    <string name="buttonImportSettings">Import Settings</string>
    <string name="buttonExportSettings">Export Settings</string>
    <string name="textImportExportTitle">Import/Export Settings</string>
    <string name="textOtherSettingsTitle">Other Settings</string>
    <string name="textFaceTitle">Face</string>
    <string name="textLanguageTitle">Language</string>
    <string name="textBeepTitle">Beep</string>
    <string name="textLevelTitle">Level</string>
    <string name="textOpenAIKeyTitle">OpenAI API Key</string>
    <string name="textOpenAIKeyHint">Input OpenAI API Key</string>
    <string name="textAzureRegionTitle">Azure Region</string>
    <string name="textAzureRegionHint">Input Region code for Azure</string>
    <string name="textAzureSubscriptionKeyTitle">Azure Subscription Key</string>
    <string name="textAzureSubscriptionKeyHint">Input Subscription Key for Azure</string>
    <string name="buttonAddLanguage">Add</string>
    <string name="buttonRemoveLanguage">Remove</string>
    <string name="buttonUpdate">Update</string>
    <string name="messageWriteConfig">Exported a config file at %s</string>
    <string name="messageConfigFileNotFound">A config file is not found.</string>
    <string name="messageUploadSuccessfully">Successfully uploaded</string>
    <string name="messageUploadFailed">Failed to upload</string>
    <string name="titleAskLoginDialog">Are you log in?</string>
    <string name="textAskLoginDialog">You are not logged in the Evaluation server. Are you log in?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="hintUsername">Username</string>
    <string name="hintPassword">Password</string>
    <string name="buttonLogin">Log in</string>
    <string name="buttonCancel">Cancel</string>
    <string name="messageUsernameEmpty">Username is empty.</string>
    <string name="messagePasswordEmpty">Password is empty.</string>
    <string name="messageUsernameAndPasswordEmpty">Username and Password are empty.</string>
    <string name="messageNetworkError">Network communication is something wrong.</string>
    <string name="messageLoginSuccessfully">Succeeded to login.</string>
    <string name="messageLoginFailed">Failed to login.</string>
    <string name="messageExportConfig">Saved an exported config file at: </string>
    <string name="messageImportConfig">Imported a config file to Hololens.</string>
    <string name="titleAddLanguageDialog">Add Language</string>
    <string name="messageAddLanguageConfirm"> files will be uploaded. Is it OK?</string>
    <string name="messageAddLanguageNotFoundFiles"> are not found.</string>
    <string name="messageAddLanguageNotFoundRequiredFiles">To add an language, you need one json file, and several audio files.</string>
    <string name="messageAddLanguageCompleted">Successfully upload all language files.</string>
    <string name="messageRemoveLanguageUnable">You cannot remove that language.</string>
    <string name="messageRemoveLanguageSuccess">Successfully removed the language.</string>
    <string name="titleRemoveLanguageDialog">Remove Language</string>
    <string name="textRemoveLanguage">Is it really ok to remove the language?:</string>
    <string name="ok">OK</string>
    <string name="buttonLogout">Log out</string>
    <string name="titleLogoutDialog">Log out?</string>
    <string name="textLogoutDialog">Is it ok to log out?</string>
    <string name="messageGettingEvaluationFile">Getting an evaluation file...</string>
    <string name="titleUploadEvaluationFile">Upload an evaluation result</string>
    <string name="textUploadEvaluationFile">Is it ok to upload an evaluation file?</string>
    <string name="textUploadingEvaluationFile">Now uploading...</string>

    <string-array name="scenarios">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="evaluationModes">
        <item>Training</item>
        <item>Scenario</item>
    </string-array>
    <string-array name="faces">
        <item>Old Lady</item>
        <item>Old Man</item>
        <item>Young Lady</item>
        <item>Young Man</item>
        <item>Real Old Lady</item>
    </string-array>
    <string-array name="thresholds">
        <item>0</item>
        <item>50</item>
        <item>100</item>
        <item>150</item>
    </string-array>
    <string-array name="bluetoothDevices">
        <item>Choose a device.</item>
    </string-array>
    <string-array name="levels">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
    <string-array name="languages">
        <item>日本語</item>
        <item>English</item>
    </string-array>
</resources>